--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,22 +59,24 @@
         app:layout_constraintVertical_bias="0.071" />
 
     <TextView
-        android:id="@+id/resultName"
-        android:layout_width="336dp"
-        android:layout_height="345dp"
+        android:id="@+id/restNameShow"
+        android:layout_width="345dp"
+        android:layout_height="231dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:padding="30sp"
         android:paddingRight="30sp"
         android:text="TextView"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/addBtn"
+        app:layout_constraintVertical_bias="0.58" />
 
     <Button
         android:id="@+id/button"
