--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/restNameShow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:padding="30sp"
-        android:text="TextView"
+        android:text="Ditt namn"
         android:textSize="50sp" />
 
     <EditText
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="121dp"
         android:layout_marginTop="10sp"
-        android:layout_marginBottom="90sp"
+        android:layout_marginBottom="50sp"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine|textPersonName"
@@ -25,13 +25,42 @@
         android:paddingBottom="10sp"
         android:text="hsehjbshcgvdhsgjsdgvdhjsghjvdfshjsdfhkjsdfhdfhsjkhofewihisofdifjdsifosdhiusfgehiufehiosohigrhiogrhiorgihogerhiogerhoighurghiu" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="0.7"
-        android:text="Load TableView"
-        android:textSize="23sp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="10sp"
+            android:layout_weight="0.7"
+            android:text="TextView"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:text="Button" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15sp"
+            android:layout_marginRight="10sp"
+            android:layout_weight="0.7"
+            android:baselineAligned="false"
+            android:padding="10sp" />
+    </LinearLayout>
 
 </LinearLayout>
