--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
         app:layout_constraintVertical_bias="0.071" />
 
     <TextView
-        android:id="@+id/restNameShow"
+        android:id="@+id/textViewShowName"
         android:layout_width="345dp"
         android:layout_height="231dp"
         android:layout_marginStart="8dp"
